# nanorq

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  annotated.html  bitmask.c  bitmask.h  chooser.c  chooser.h  classes.html  decode.c  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293.js  dir_1410259ace0b5ec7f8f3cdf3a54e2dac.html  dir_1410259ace0b5ec7f8f3cdf3a54e2dac.js  dir_292c2a3233986ab95ec1d457a2daa280.html  dir_4b38482e03f8222e57f6983bf6ecd053.html  dir_4b38482e03f8222e57f6983bf6ecd053.js  dir_7fd0a0f9e73f3f456e62fc6085e3dd28.html  dir_7fd0a0f9e73f3f456e62fc6085e3dd28.js  dir_8d44b6dce5e0aa8d997dd925bc6bf6aa.html  dir_8d44b6dce5e0aa8d997dd925bc6bf6aa.js  dir_993866bb2d208f9d71346d19539adce3.html  dir_993866bb2d208f9d71346d19539adce3.js  dir_f5b4d4deec34082ecc43710431ad66ff.html  dir_f5b4d4deec34082ecc43710431ad66ff.js  encode.c  example.make  files.html  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_f.html  (+38 more)
docs/: README_8md.html  README_8md_source.html  annotated.html  annotated_dup.js  bitmask_8c.html  bitmask_8c.js  bitmask_8c__incl.map  bitmask_8c__incl.md5  bitmask_8c_a0b049fc6e42d4edb47d0ec69bd5af7ef.html  bitmask_8c_a0b049fc6e42d4edb47d0ec69bd5af7ef_a0b049fc6e42d4edb47d0ec69bd5af7ef_icgraph.map  bitmask_8c_a0b049fc6e42d4edb47d0ec69bd5af7ef_a0b049fc6e42d4edb47d0ec69bd5af7ef_icgraph.md5  bitmask_8c_a16b392ff9978c5e31c27968ed75f79e1.html  bitmask_8c_a3b8b7d670ea2a2526b93623a8681341a.html  bitmask_8c_a3b8b7d670ea2a2526b93623a8681341a_a3b8b7d670ea2a2526b93623a8681341a_icgraph.map  bitmask_8h.js  (+656 more)
oblas/: CMakeLists.txt  Makefile  oblas.h  oblas_avx.c  oblas_classic.c  oblas_neon.c  oblas_sse.c  octmat.c  octmat.h  octmul_hilo.h  octtables.h  tablegen.c  tablegen_sse.c
(+1248 files in other folders)
